# blobembed

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
data/: domain_enumerations.yaml  wordnet_categories.yaml
doc/: catalog-as-taxonomy.md  reflective-architecture.md  resolution-sieve.md  self-bootstrapping-classification.md  topic-bounding-boxes.md
docs/: Topic Bounding Boxes.md  WordNet Taxonomy.md
duckdb_ext/src/: blobembed_duckdb.c
ext/duckdb/: CMakeLists.txt  pyproject.toml
ext/duckdb/blobembed_duckdb/: __init__.py
ext/sqlite/: CMakeLists.txt  pyproject.toml
ext/sqlite/blobembed_sqlite/: __init__.py
include/: blobembed.h
python/: bindings.cpp
python/blobembed/: __init__.py
scripts/: geonames_model.py  harvest_domains.py
sql/: classify_socrata.sql  decompose_batch.sql  decompose_columns.sql  detect_pivoted_columns.sql  embedding_schema_pg.sql  enum_detect.sql  experiment_socrata.sql  geonames_embeddings.sql  geonames_enriched_filters.sql  geonames_filters.sql  geonames_load.sql  load_taxonomy.sql  model_benchmark.sql  model_comparison_ghg.sql  model_eval.sql  table_topics.sql  test_resolution_worldcities.sql
sqlite_ext/src/: blobembed_sqlite.c
src/: blobembed_core.cpp
