[project]
name = "blobembed"
version = "0.1.0"
description = "Text embeddings via GGUF models (llama.cpp) for SQLite, DuckDB, and Python"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "nanobind>=2.0.0",
    "huggingface-hub>=0.25.0",
]

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.25.0",
    "nanobind>=2.12.0",
]
