[project]
name = "blobembed"
version = "0.1.0"
description = "Text embeddings via GGUF models (llama.cpp) for SQLite, DuckDB, and Python"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "nanobind>=2.0.0",
    "huggingface-hub>=0.25.0",
]

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.25.0",
    "nanobind>=2.12.0",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=17.0.0",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.48",
]
