[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "blobembed-sqlite"
version = "0.2.1"
description = "text embeddings via GGUF models (llama.cpp) — Sqlite extension"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[tool.scikit-build]
wheel.packages = ["blobembed_sqlite"]
sdist.include = ["src/**", "include/**", "sqlite_ext/**"]
